# chimera

./: .clang-format  .clang-tidy  .clangd  .gitignore  .justfile  CMakeLists.txt  CMakePresets.json
cmake/: integration.cmake  package.cmake
docs/: plugin.md
host/: CMakeLists.txt
host/cmake/: dependencies.cmake
host/src/: libloading.hpp  library.hpp  main.cpp  manifest.cpp  manifest.hpp  pack.cpp  pack.hpp  plugin.cpp  plugin.hpp  plugins.cpp  plugins.hpp  serialization.hpp  utils.hpp  version.cpp  version.hpp
host/src/libloading/: linux.cpp  windows.cpp
host/src/plugin/: loading.cpp  loading.hpp  plugin.cpp  plugin.hpp
host/src/utils/: linux.cpp  utils.cpp  windows.cpp
plugins/core/: CMakeLists.txt  plugin.json
plugins/core/cmake/: compile-options.cmake
plugins/core/include/core/: core.hpp
plugins/core/src/: core.cpp
plugins/rend/: CMakeLists.txt  plugin.json
plugins/rend/cmake/: dependencies.cmake  install-config.cmake  install-rules.cmake
plugins/rend/include/rend/: context.hpp  rend.hpp  systems.hpp
plugins/rend/src/: context.cpp  rend.cpp  systems.cpp
sdk/: CMakeLists.txt
sdk/cmake/: dependencies.cmake  install-config.cmake  install-rules.cmake
sdk/include/chimera/: context.hpp  flecs.h  sdk.hpp  window.hpp
sdk/include/chimera/window/: raw_window.hpp  window.hpp
sdk/src/: sdk.cpp  window.cpp
sdk/src/flecs/: flecs.c
tests/: CMakeLists.txt
tests/host/: tests.cpp
tests/integration/: CMakeLists.txt  pack.json
tests/integration/plugins/add/: CMakeLists.txt  add.cpp  add.hpp  plugin.json
tests/integration/plugins/div/: CMakeLists.txt  div.cpp  div.hpp  plugin.json
tests/integration/plugins/mul/: CMakeLists.txt  mul.cpp  mul.hpp  plugin.json
tests/integration/plugins/sub/: CMakeLists.txt  plugin.json  sub.cpp  sub.hpp
tests/rend/: tests.cpp
tests/sdk/: tests.cpp
tests/src/: rend_tests.cpp  sdk_tests.cpp
